# bladelist

./: .gitignore  LICENCE  Pipfile  README.md  db.sqlite3  manage.py  pyproject.toml
api/: private_views.py  serializers.py  tests.py  urls.py  views.py
assets/: sitemap.xml
assets/css/: servers.css  style.css
assets/js/: bot.js  script.js  server.js
bladebotlist/: asgi.py  hosts.py  settings.py  urls.py  wsgi.py
main_site/: admin.py  apps.py  constants.py  messages.py  models.py  tests.py  urls.py  views.py
main_site/migrations/: 0001_initial.py  0002_alter_bot_verification_status.py  0002_member_tag.py  0003_alter_bot_server_count.py  0003_alter_member_user.py  0004_alter_bot_id.py  0004_auto_20210727_1608.py  0005_bot_server_count.py  0005_server_long_desc.py  0006_auto_20210727_1700.py  0006_bot_avatar_url.py  0007_auto_20210528_0622.py  0007_membermeta_admin_servers.py  0008_alter_server_tags.py  0008_bot_tags.py  0009_alter_server_admins.py  0011_servermeta.py  (+28 more)
static/: arc-sw.js  robots.txt
templates/: 404.html  about.html  add.html  bot.html  bot_add.html  bot_edit.html  bot_list.html  bot_page.html  bot_search.html  bots.html  edit_bot.html  edit_profile.html  index.html  login_handler.html  privacy.html  profile.html  profile_edit.html  profile_page.html  requirements.html  search.html  server_add.html  server_edit.html  server_index.html  server_list.html  server_page.html  server_search.html  servers.html  servers_search.html  staff.html  terms.html  test.html
utils/: api_client.py  background.py  embedhandler.py  hashing.py  mixins.py  oauth.py
(+12 files in other folders)
